{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 16,
  "lineage": "5e329571-cb8f-1a51-3844-8e394255803e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649099491251:subnet/subnet-0a4c12fa9a91e08a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a4c12fa9a91e08a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649099491251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 1"
            },
            "tags_all": {
              "Name": "private subnet 1"
            },
            "vpc_id": "vpc-0d0d985b0de3f9a1a"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649099491251:subnet/subnet-0769065026193a1f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0769065026193a1f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "649099491251",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private subnet 2"
            },
            "tags_all": {
              "Name": "private subnet 2"
            },
            "vpc_id": "vpc-0d0d985b0de3f9a1a"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649099491251:vpc/vpc-0d0d985b0de3f9a1a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0836c4f9ad5cee5c3",
            "default_route_table_id": "rtb-0332c99cc3d90486b",
            "default_security_group_id": "sg-05bfeb5d8c73cc46c",
            "dhcp_options_id": "dopt-010a05fea6c207605",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d0d985b0de3f9a1a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0332c99cc3d90486b",
            "owner_id": "649099491251",
            "tags": {
              "Name": "VPC for ecs"
            },
            "tags_all": {
              "Name": "VPC for ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:649099491251:security-group/sg-033559c71a6d96e92",
            "description": "Fargate service security group",
            "egress": [],
            "id": "sg-033559c71a6d96e92",
            "ingress": [],
            "name": "ecs-fargate-example-ecs-service-sg-20220704161901099400000001",
            "name_prefix": "ecs-fargate-example-ecs-service-sg-",
            "owner_id": "649099491251",
            "revoke_rules_on_delete": true,
            "tags": {
              "Environment": "test",
              "Name": "ecs-fargate-example-ecs-service-sg",
              "Project": "Test"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "ecs-fargate-example-ecs-service-sg",
              "Project": "Test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d0d985b0de3f9a1a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs-fargate",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3139095836",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-033559c71a6d96e92",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc",
            "module.ecs-fargate.aws_security_group.ecs_service"
          ]
        }
      ]
    }
  ]
}